samples/_failures_safe/1761528223_8989d2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9f022cab.c: In function ‘main’:
./samples/SAFE/__tmp_9f022cab.c:167:12: error: missing terminating " character
  167 |     printf("Initial
      |            ^~~~~~~~
./samples/SAFE/__tmp_9f022cab.c:167:5: error: expected expression at end of input
  167 |     printf("Initial
      |     ^~~~~~
./samples/SAFE/__tmp_9f022cab.c:167:5: error: expected declaration or statement at end of input
